--- a/swagger/user.yml
+++ b/swagger/user.yml
@@ -70,22 +70,30 @@ paths:
         200:
           description: User is successfully created
 
+        400:
+          description: Invalid request
         500:
           description: Some server error occured
+
     get:
       summary: Get authenticated user
       tags: [Users]
       responses:
         200:
           description: User login successfully
+        401:
+          description: Unauthorized
         500:
           description: Some server error occured
+
     delete:
       summary: Delete authenticated user
       tags: [Users]
       responses:
         200:
           description: Delete user successfully
+        404:
+          description: Not found
         500:
           description: Some server error occured
 
@@ -101,6 +109,8 @@ paths:
       responses:
         200:
           description: User is successfully updated
+        400:
+          description: Invalid request
         500:
           description: Some server error occured
 
@@ -128,6 +138,8 @@ paths:
       responses:
         200:
           description: User login successfully
+        400:
+          description: Invalid request
         500:
           description: Some server error occured
 
@@ -159,6 +171,8 @@ paths:
       responses:
         200:
           description: Refresh token successfully
+        400:
+          description: Invalid request
         500:
           description: Some server error occured
 
@@ -186,6 +200,8 @@ paths:
       responses:
         200:
           description: Add address successfully
+        400:
+          description: Invalid request
         500:
           description: Some server error occured
 
@@ -220,6 +236,10 @@ paths:
       responses:
         200:
           description: Update address successfully
+        400:
+          description: Invalid request
+        404:
+          description: Not found
         500:
           description: Some server error occured
 
@@ -236,6 +256,8 @@ paths:
       responses:
         200:
           description: Delete address successfully
+        404:
+          description: Not found
         500:
           description: Some server error occured
 
@@ -262,7 +284,9 @@ paths:
           description: User Id
       responses:
         200:
-          description: Update address successfully
+          description: Get address successfully
+        404:
+          description: Not found
         500:
           description: Some server error occured
 
@@ -285,6 +309,10 @@ paths:
       responses:
         200:
           description: Delete user successfully
+        400:
+          description: Invalid request
+        404:
+          description: Not found
         500:
           description: Some server error occured
 
@@ -301,5 +329,7 @@ paths:
       responses:
         200:
           description: Delete user successfully
+        404:
+          description: Not found
         500:
           description: Some server error occured
